/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kmr.proto;

message SecureDeletionData {
    // Counter used to generate new slot IDs. Increment it to allocate a slot ID. Ideally, we
    // should reuse freed slot IDs. A simple counter should suffice here though.
    uint32 last_free_slot = 1;
    bytes factory_secret = 2;
    map<uint32, bytes> secure_deletion_secrets = 3;
}
